# Neumonia

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  docker-compose.yml  pyproject.toml  requirements.txt  run_docker.sh
docs/: .gitignore  DOCKER.md  README.md
reports/figures/: 1234567890_resultado_20250913-180814.txt
reports/gui/: historial.csv
scripts/: smoke.py
src/: grad_cam.py  integrator.py  load_model.py  preprocess_img.py  read_img.py
src/data/: preprocess_img.py  read_img.py
src/models/: grad_cam.py  load_model.py
src/visualizations/: integrator.py  ui_tk.py
tests/: test_model.py  test_pipeline_smoke.py  test_preprocess.py  test_read_image_errors.py  test_save_outputs.py
